--- a/Frontend/html/hw1/index.html
+++ b/Frontend/html/hw1/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW1</title>
 </head>
+
 <body>
     <!-- h1 -->
     <h1>Oğuzhan Akpınar</h1>
     <!-- h2 -->
     <h2>Hakkımda</h2>
     <!-- p -->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis nunc tortor, ut venenatis eros faucibus vel. Morbi tincidunt leo sit amet massa mattis, id facilisis velit cursus. Nunc ac turpis ac risus euismod tempus. Praesent ut varius nisl. Nullam viverra enim quis magna finibus, eget consectetur tortor scelerisque. Aenean et tincidunt sem, ut euismod lectus. Vestibulum luctus ultrices quam, non placerat ex semper ut.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis nunc tortor, ut venenatis eros
+        faucibus vel. Morbi tincidunt leo sit amet massa mattis, id facilisis velit cursus. Nunc ac turpis ac risus
+        euismod tempus. Praesent ut varius nisl. Nullam viverra enim quis magna finibus, eget consectetur tortor
+        scelerisque. Aenean et tincidunt sem, ut euismod lectus. Vestibulum luctus ultrices quam, non placerat ex semper
+        ut.</p>
     <h2>H2</h2>
     <!-- h3 -->
     <h3>H3</h3>
-    <p>Vestibulum eu congue mi. Praesent erat nunc, iaculis ut tellus eu, hendrerit aliquet risus. Maecenas vel enim ex. In eu tortor suscipit lacus sodales congue nec sit amet odio. Aliquam non magna lacus. Suspendisse non eros tincidunt, sollicitudin erat a, sollicitudin elit. Mauris quis ornare ipsum. Maecenas fringilla sed ligula ac congue. Maecenas volutpat, libero non elementum posuere, eros neque iaculis nisl, at varius elit elit quis elit. Sed in lectus finibus, maximus ante nec, cursus magna. Mauris euismod et tellus sed tempor. Morbi efficitur lectus eget nisi tempus mollis. Integer et vestibulum ligula. Vestibulum scelerisque erat id odio ultricies viverra. Integer vitae aliquet urna.</p>
+    <p>Vestibulum eu congue mi. Praesent erat nunc, iaculis ut tellus eu, hendrerit aliquet risus. Maecenas vel enim ex.
+        In eu tortor suscipit lacus sodales congue nec sit amet odio. Aliquam non magna lacus. Suspendisse non eros
+        tincidunt, sollicitudin erat a, sollicitudin elit. Mauris quis ornare ipsum. Maecenas fringilla sed ligula ac
+        congue. Maecenas volutpat, libero non elementum posuere, eros neque iaculis nisl, at varius elit elit quis elit.
+        Sed in lectus finibus, maximus ante nec, cursus magna. Mauris euismod et tellus sed tempor. Morbi efficitur
+        lectus eget nisi tempus mollis. Integer et vestibulum ligula. Vestibulum scelerisque erat id odio ultricies
+        viverra. Integer vitae aliquet urna.</p>
 </body>
+
 </html>
